<?xml version="1.0"?>
<package>
  <name>ros_imresize</name>
  <version>0.0.0</version>
  <description> The ros_imresize package </description>
 
  <maintainer email="kevinleezhang@gmail.com">Kevin Zhang</maintainer>

  <license>BSD</license>

  <url type="git">https://github.com/firephinx/ros_imresize</url>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
